--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "immutable": "^3.8.2",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
@@ -11,6 +12,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-immutable": "^4.0.0",
     "reselect": "^3.0.1",
     "todomvc-app-css": "2.1.1",
     "todomvc-common": "1.0.5",
